Few changes to home

--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
         <li><a href="browse.html">Web Design</a></li>
         <li><a href="browse.html">Web Programming</a></li>
         <li><a href="browse.html">Content Creation</a></li>
-        <li><a href="browse.html">Intrnet Marketing</a></li>
+        <li><a href="browse.html">Online Marketing</a></li>
         <li><a href="browse.html">XHTML Templates</a></li>
     </ul>
 </div><!--leftmenu end-->
